width of mentors-item on tablet was fixed, margin-bottom on tablet was fixed

--- a/src/css/mentors.css
+++ b/src/css/mentors.css
@@ -28,7 +28,7 @@
   margin-bottom: 4px;
 }
 .mentors-description {
-  color: rgba(255, 255, 255, 0.5);
+  opacity: 50%;
   text-align: center;
   font-size: 12px;
   line-height: 1.33;
@@ -36,12 +36,19 @@
   font-weight: 400;
 }
 @media only screen and (min-width: 768px) {
+  .mentors-title {
+    margin-bottom: 50px;
+  }
   .mentors-list {
     row-gap: 93px;
     column-gap: 100px;
   }
+
   .mentors-item {
     width: calc((100% - 330px) / 2);
+  }
+  .mentors-item:nth-child(3) {
+    width: 194px;
   }
   .mentors-name {
     font-size: 28px;
@@ -59,10 +66,6 @@
   }
   .mentors-item {
     width: calc((100% - 345px) / 4);
-  }
-
-  .mentors-item:nth-child(3) {
-    width: 194px;
   }
 }
 @media only screen and (min-width: 1440px) {
